2000-05-30  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf.spec.in: Include all the loader libraries.  Patch
	from Frank de Lange <frank@unternet.org>.

2000-05-09  Darin Adler  <darin@eazel.com>

	* gdk-pixbuf/test-gdk-pixbuf.c:
	Fixed includes to get rid of accidental GNOME dependency.

2000-05-26  Cody Russell  <car0969@gamma2.uta.edu>
	* Makefile.am: Added gdk-pixbuf.spec to EXTRA_DIST

2000-05-22  Federico Mena Quintero  <federico@helixcode.com>

	* configure.in: Bumped version number to 0.8.0.

	* doc/Makefile.am (content_files): The toplevel gdk-pixbuf.sgml
	file was not being distributed.

	* gdk-pixbuf/pixops/Makefile.am (EXTRA_DIST): Added DETAILS.

2000-05-09  Darin Adler  <darin@eazel.com>

	* gdk-pixbuf/gdk-pixbuf-drawable.c: (rgb565lsb), (rgb565msb),
	(rgb565alsb), (rgb565amsb), (rgb555lsb), (rgb555msb), (rgb555alsb),
	(rgb555amsb), (convert_real_slow): Change all conversion from 16-bit
	formats to 32-bit formats to re-use the high bits of the color values
	so that white maps to full white.

Fri May  5 12:16:32 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/DETAILS: Add beginnings of file with 
	detailed information about the structure and algorithms
	of pixops so people can fix it instead of breaking it.

2000-05-04  Darin Adler  <darin@eazel.com>

	* gdk-pixbuf/pixops/pixops.c: (pixops_composite_nearest),
	(composite_pixel), (composite_line):
	* gdk-pixbuf/test-gdk-pixbuf.c: (simple_composite_test_one_type):
	Now that Owen explained the algorithm, I think I implemented it
	right for the cases where the destination pixbuf is not opaque.
	The test does seem to confirm it.

2000-05-04  Darin Adler  <darin@eazel.com>

	* gdk-pixbuf/.cvsignore:
	* gdk-pixbuf/Makefile.am:
	* gdk-pixbuf/test-gdk-pixbuf.c (store_pixel), (fill_with_pixel),
	(load_pixel), (simple_composite_test_one),
	(simple_composite_test_one_type), (simple_composite_test), (main):
	Added some tests of composite to highlight problems in the old